# float12

./: CMakeLists.txt  LLM_TRAINING_GUIDE.md  MATH_FUNCTIONS.md  README.md  float12.h  main.cpp  test_advanced_math.cpp  test_math.cpp  test_ml_training.cpp
src/: CMakeLists.txt  constants.cpp  convert.cpp  error.cpp  math.cpp  ml_support.cpp  operation.cpp
src/include/: float12.hpp
